{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 101,
  "lineage": "7d401d30-1de0-78b1-3582-b7defe1f00c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066815c128bc12fda",
            "arn": "arn:aws:ec2:ap-south-1:835590170330:elastic-ip/eipalloc-066815c128bc12fda",
            "association_id": "eipassoc-07b9262cdcb4288a9",
            "domain": "vpc",
            "id": "eipalloc-066815c128bc12fda",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a21cd80abee20878",
            "private_dns": "ip-10-0-1-112.ap-south-1.compute.internal",
            "private_ip": "10.0.1.112",
            "public_dns": "ec2-3-108-104-161.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.104.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "to-do-nat-eip",
              "Project": "to-do"
            },
            "tags_all": {
              "Name": "to-do-nat-eip",
              "Project": "to-do"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:835590170330:internet-gateway/igw-042b76f8399db3286",
            "id": "igw-042b76f8399db3286",
            "owner_id": "835590170330",
            "tags": {
              "Name": "to-do-igw",
              "Project": "to-do"
            },
            "tags_all": {
              "Name": "to-do-igw",
              "Project": "to-do"
            },
            "vpc_id": "vpc-07c5f0bdf9419748e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066815c128bc12fda",
            "association_id": "eipassoc-07b9262cdcb4288a9",
            "connectivity_type": "public",
            "id": "nat-0d8b9dbb80127a133",
            "network_interface_id": "eni-0a21cd80abee20878",
            "private_ip": "10.0.1.112",
            "public_ip": "3.108.104.161",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02f0d231a196d1d89",
            "tags": {
              "Name": "to-do-nat",
              "Project": "to-do"
            },
            "tags_all": {
              "Name": "to-do-nat",
              "Project": "to-do"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:835590170330:route-table/rtb-0c71e5334338cd5e6",
            "id": "rtb-0c71e5334338cd5e6",
            "owner_id": "835590170330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8b9dbb80127a133",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "to-do-private-rt",
              "Project": "to-do"
            },
            "tags_all": {
              "Name": "to-do-private-rt",
              "Project": "to-do"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f0bdf9419748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:835590170330:route-table/rtb-0a09f51928249297e",
            "id": "rtb-0a09f51928249297e",
            "owner_id": "835590170330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042b76f8399db3286",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "to-do-public-rt",
              "Project": "to-do"
            },
            "tags_all": {
              "Name": "to-do-public-rt",
              "Project": "to-do"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f0bdf9419748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f54ba1c52159aa5c",
            "route_table_id": "rtb-0c71e5334338cd5e6",
            "subnet_id": "subnet-0e814e78a3f5b95c4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3d680c735ba2a0a",
            "route_table_id": "rtb-0c71e5334338cd5e6",
            "subnet_id": "subnet-0abd29e43fb442ba0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f911e81694d5d80",
            "route_table_id": "rtb-0a09f51928249297e",
            "subnet_id": "subnet-02f0d231a196d1d89"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037e7ed1a082214eb",
            "route_table_id": "rtb-0a09f51928249297e",
            "subnet_id": "subnet-0eb38a31d8e44a395"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:835590170330:security-group/sg-01d9ba199fc3b8a13",
            "description": "EKS cluster control plane security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d9ba199fc3b8a13",
            "ingress": [],
            "name": "to-do-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "835590170330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "to-do-eks-cluster-sg",
              "Project": "to-do"
            },
            "tags_all": {
              "Name": "to-do-eks-cluster-sg",
              "Project": "to-do"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f0bdf9419748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:835590170330:security-group/sg-016208b2c7dd92156",
            "description": "EKS worker nodes security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016208b2c7dd92156",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ALB to reach node ports",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "Allow control plane to communicate with nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d9ba199fc3b8a13"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "to-do-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "835590170330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "to-do-eks-nodes-sg",
              "Project": "to-do"
            },
            "tags_all": {
              "Name": "to-do-eks-nodes-sg",
              "Project": "to-do"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f0bdf9419748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:835590170330:subnet/subnet-0e814e78a3f5b95c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e814e78a3f5b95c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835590170330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "to-do-private-1",
              "Project": "to-do",
              "Type": "private",
              "kubernetes.io/cluster/to-do": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "to-do-private-1",
              "Project": "to-do",
              "Type": "private",
              "kubernetes.io/cluster/to-do": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07c5f0bdf9419748e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:835590170330:subnet/subnet-0abd29e43fb442ba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abd29e43fb442ba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835590170330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "to-do-private-2",
              "Project": "to-do",
              "Type": "private",
              "kubernetes.io/cluster/to-do": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "to-do-private-2",
              "Project": "to-do",
              "Type": "private",
              "kubernetes.io/cluster/to-do": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07c5f0bdf9419748e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:835590170330:subnet/subnet-02f0d231a196d1d89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f0d231a196d1d89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835590170330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "to-do-public-1",
              "Project": "to-do",
              "Type": "public",
              "kubernetes.io/cluster/to-do": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "to-do-public-1",
              "Project": "to-do",
              "Type": "public",
              "kubernetes.io/cluster/to-do": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07c5f0bdf9419748e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:835590170330:subnet/subnet-0eb38a31d8e44a395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb38a31d8e44a395",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835590170330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "to-do-public-2",
              "Project": "to-do",
              "Type": "public",
              "kubernetes.io/cluster/to-do": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "to-do-public-2",
              "Project": "to-do",
              "Type": "public",
              "kubernetes.io/cluster/to-do": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07c5f0bdf9419748e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:835590170330:vpc/vpc-07c5f0bdf9419748e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6773d104154fc28",
            "default_route_table_id": "rtb-06bd2ec54a4839e03",
            "default_security_group_id": "sg-08f1f4c1a3f5474f5",
            "dhcp_options_id": "dopt-070f4b382c88f6eca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c5f0bdf9419748e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06bd2ec54a4839e03",
            "owner_id": "835590170330",
            "tags": {
              "Name": "to-do-vpc",
              "Project": "to-do"
            },
            "tags_all": {
              "Name": "to-do-vpc",
              "Project": "to-do"
            }
          }
        }
      ]
    }
  ]
}